@@ -6,17 +6,14 @@ __all__ = [
 
 
 class RedisError(Exception):
-    """Base exception class for aioredis exceptions.
-    """
+    """Base exception class for aioredis exceptions."""
 
 
 class ProtocolError(RedisError):
-    """Raised when protocol error occurs.
-    """
+    """Raised when protocol error occurs."""
 
 
 class ReplyError(RedisError):
-    """Raised for redis error replies (-ERR).
-    """
+    """Raised for redis error replies (-ERR)."""
 
 # TODO: add ConnectionClosed exception.
